Changing footer on index.html

--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html>
 
 <head>
-    <title>Découvrir Html et Css</title>
+    <title>Sed a tortor tortor. Nunc laoreet scelerisque dolor ut mattis. Mauris rhoncus, sapien id scelerisque pulvinar, elit ipsum aliquet metus, in maximus nulla libero at lacus. Aliquam nisi ipsum, pretium sit amet turpis ut, ultricies elementum leo. Mauris sagittis dictum mollis. Vestibulum mi neque, congue a vulputate ut, eleifend sit amet neque. Vestibulum id velit sagittis, eleifend enim sit amet, porttitor sapien. Mauris at finibus leo. Cras vitae orci dui. Donec et cursus dui. Quisque dolor dui, viverra at eleifend ut, volutpat nec magna. Donec consequat sagittis elit eu auctor. Sed turpis felis, viverra id volutpat suscipit, consectetur feugiat lacus. Sed ullamcorper non eros eget blandit.
+
+Nulla non dapibus tortor, et tempus dolor. Ut aliquet malesuada ex, sed dictum libero bibendum eu. Nullam eleifend elit vitae velit eleifend, et vehicula dolor varius. Fusce eget tincidunt dui. Etiam eget massa id nisl viverra finibus eu et diam. Vivamus gravida tristique magna sed auctor. Vestibulum sed metus id purus interdum consectetur. Vivamus et nisi in eros molestie mattis vel vel lorem.</title>
     <meta charset="utf-8" />
     <!-- view port permet de faire du Responsive . L'affichage s'adapte automatiquement en fonction du device-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
